# obis-products-catalog

./: .env  .env.obis.example  .gitignore  README.md  README_OBIS_nodes_institutions_sync.md  README_obis_import.md  README_translate_dataset_to_product.md  README_zenodo_import.md  Test Deployment README.md  docker-compose.dev.yml  docker-compose.yml  load-test-auth.sh  load-test.sh
ckan/: Dockerfile  Dockerfile.dev
ckan/docker-entrypoint.d/: 99_setup_scheming.sh
ckan/setup/: start_ckan_development.sh.override
docs/: _config.yml  api-docs.md  developer-guide.md  index.md  user-guide.md
nginx/setup/: default.conf
src/ckanext-doi-import/: setup.py
src/ckanext-doi-import/ckanext/doi_import/: plugin.py
src/ckanext-doi-import/ckanext/doi_import/templates/doi_import/: dataset_new_choice.html  import_form.html
src/ckanext-obis_theme/: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
src/ckanext-obis_theme/.github/workflows/: test.yml
src/ckanext-obis_theme/ckanext/obis_theme/: helpers.py  plugin.py
src/ckanext-obis_theme/ckanext/obis_theme/assets/: script.js  webassets.yml
src/ckanext-obis_theme/ckanext/obis_theme/public/css/: theme.css
src/ckanext-obis_theme/ckanext/obis_theme/templates/: base.html  example_page.html  footer.html  header.html
src/ckanext-obis_theme/ckanext/obis_theme/templates/home/: about.html  header.html  index.html  layout1.html
src/ckanext-obis_theme/ckanext/obis_theme/templates/home/snippets/: highlights.html  products.html
src/ckanext-obis_theme/ckanext/obis_theme/templates/package/: base.html  read.html
src/ckanext-obis_theme/ckanext/obis_theme/templates/package/snippets/: additional_info.html  organization_prod.html  resource_item.html  resources_list.html
src/ckanext-obis_theme/ckanext/obis_theme/templates/snippets/: facet_list.html  home_breadcrumb_item.html  search_form.html
src/ckanext-obis_theme/ckanext/obis_theme/tests/: test_plugin.py
src/ckanext-obis_theme/scripts/: README.md  obis_institute_sync.py  obis_sync.py
src/ckanext-odis/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
src/ckanext-odis/.github/workflows/: test.yml
src/ckanext-odis/ckanext/odis/: plugin.py
src/ckanext-odis/ckanext/odis/assets/: script.js  webassets.yml
src/ckanext-odis/ckanext/odis/tests/: test_plugin.py
src/ckanext-zenodo/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
src/ckanext-zenodo/.github/workflows/: test.yml
src/ckanext-zenodo/ckanext/zenodo/: cli.py  group.yaml  plugin.py  validators.py  zenodo_schema.yaml
src/ckanext-zenodo/ckanext/zenodo/assets/: script.js  webassets.yml
src/ckanext-zenodo/ckanext/zenodo/config/: zenodo_dois.txt
src/ckanext-zenodo/ckanext/zenodo/scripts/: harvest_zenodo.py
src/ckanext-zenodo/ckanext/zenodo/tests/: test_plugin.py
