[project]
name = "ckanext-odis"
version = "0.0.1"
description = "An extension to map from CKAN to ODIS-flavored schema.org"
readme = "README.md"
authors = [
    {name = "Stephen Formel", email = "steve@thedatapatch.com"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/sformel/ckanext-odis"

[project.entry-points."ckan.plugins"]
odis = "ckanext.odis.plugin:OdisPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
